--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ SCHOOL OF PHYSICS</h2>
 <div class="contact-me">
   <center>
     <h3>CHEMICAL LIST</h3>
-    <a class="myButton" href="https://mohan23111997.github.io/Chemicals/"><b>VIEW</b></a><br>
+    <a class="myButton" href="https://mohan23111997.github.io/list/"><b>VIEW</b></a><br>
   <p><u><b></b></u></p>
 </center></div>
 
